  - remove SPVM::FloatList->values
  - remove SPVM::DoubleList->values
  - remove SPVM::StringList->values
  - remove SPVM::List->values
  - revert [0.0940]add norw package variable descriptor
  - revert [0.0940]add norw field descriptor
  - revert [0.0940]rw become package variable declaration default
  - revert [0.0940]rw become field declaration default
  - add SPVM::ByteList->set_array
0.0947 2021-04-27
  - array equals methods return 1 if both arrays is undef. return 0 if only one one arrays is undef.
    equals_byte_array
    equals_short_array
    equals_int_array
    equals_long_array
    equals_float_array
    equals_double_array
    equals_string_array
    equals_object_array
  - rename SPVM::ArrayUtil->slice_byte to SPVM::ArrayUtil->copy_array_range_byte
  - rename SPVM::ArrayUtil->slice_short to SPVM::ArrayUtil->copy_array_range_short
  - rename SPVM::ArrayUtil->slice_int to SPVM::ArrayUtil->copy_array_range_int
  - rename SPVM::ArrayUtil->slice_long to SPVM::ArrayUtil->copy_array_range_long
  - rename SPVM::ArrayUtil->slice_float to SPVM::ArrayUtil->copy_array_range_float
  - rename SPVM::ArrayUtil->slice_double to SPVM::ArrayUtil->copy_array_range_double
  - rename SPVM::ArrayUtil->slice_string to SPVM::ArrayUtil->copy_array_range_string
  - rename SPVM::ArrayUtil->slice_object to SPVM::ArrayUtil->copy_array_range_object
  - fix bug that import subroutine is not checked the existance
  - rename SPVM::Sort->sortb to SPVM::Sort->sort_byte
  - rename SPVM::Sort->sorts to SPVM::Sort->sort_short
  - rename SPVM::Sort->sorti to SPVM::Sort->sort_int
  - rename SPVM::Sort->sortl to SPVM::Sort->sort_long
  - rename SPVM::Sort->sortf to SPVM::Sort->sort_float
  - rename SPVM::Sort->sortd to SPVM::Sort->sort_double
  - rename SPVM::Sort->sorto to SPVM::Sort->sort_object
  - move SPVM::Sort->sort_byte   to SPVM::ArrayUtil->sort_byte  
  - move SPVM::Sort->sort_short  to SPVM::ArrayUtil->sort_short 
  - move SPVM::Sort->sort_int    to SPVM::ArrayUtil->sort_int   