@@ -4,7 +4,7 @@ package SPVM::ShortList;
 
 =head1 NAME
 
-SPVM::ShortList - Continuous dynamic short array
+SPVM::ShortList - Dynamic short array
 
 =head1 SYNOPSYS
   
@@ -72,39 +72,6 @@ Create a new L<SPVM::ShortList> object with array length.
 
 Get list length.
 
-=head2 push
-  
-  sub push : void ($self : self, $value : short)
-
-Appending the value to the end of list.
-
-=head2 pop
-
-  sub pop : short ($self : self)
-
-Pops and returns the last value of the list, shortening the array by one element
-If there are no elements in the list, exception occur.
-
-=head2 unshift
-
-  sub unshift : void ($self : self, $value : short)
-
-Appending the value to the top of list.
-
-=head2 shift
-
-  sub shift : short ($self : self)
-
-Shifts the first value of the list off and returns it, shortening
-the array by 1 and moving everything down.
-If there are no elements in the list, exception occur.
-
-=head2 set
-
-  sub set : void ($self : self, $index : int, $value : short)
-
-Set the value with index.
-
 =head2 get
 
   sub get : short ($self : self, $index : int)
@@ -117,17 +84,24 @@ Get the value with index.
 
 Insert a element to the specific index.
 
+=head2 pop
+
+  sub pop : short ($self : self)
+
+Pops and returns the last value of the list, shortening the array by one element
+If there are no elements in the list, exception occur.
+
+=head2 push
+  
+  sub push : void ($self : self, $value : short)
+
+Appending the value to the end of list.
+
 =head2 remove
 
   sub remove : short ($self : self, $index : int)
 
 Remove and return the element which is specified by the index.
-
-=head2 to_array
-
-  sub to_array : short[] ($self : self)
-
-Convert L<SPVM::ShortList> to short array.
 
 =head2 resize
 
@@ -136,3 +110,30 @@ Convert L<SPVM::ShortList> to short array.
 Resize list.
 
 New length must be more than or equals to 0, otherwise a exception occur.
+
+=head2 set
+
+  sub set : void ($self : self, $index : int, $value : short)
+
+Set the value with index.
+
+=head2 shift
+
+  sub shift : short ($self : self)
+
+Shifts the first value of the list off and returns it, shortening
+the array by 1 and moving everything down.
+If there are no elements in the list, exception occur.
+
+=head2 to_array
+
+  sub to_array : short[] ($self : self)
+
+Convert L<SPVM::ShortList> to short array.
+
+=head2 unshift
+
+  sub unshift : void ($self : self, $value : short)
+
+Appending the value to the top of list.
+
