@@ -55,6 +55,7 @@
   - revert [0.0940]rw become package variable declaration default
   - revert [0.0940]rw become field declaration default
   - add SPVM::ByteList->set_array
+  - add SPVM::ShortList->set_array
 0.0947 2021-04-27
   - array equals methods return 1 if both arrays is undef. return 0 if only one one arrays is undef.
     equals_byte_array
